--- a/design-documents/data-initial.yml
+++ b/design-documents/data-initial.yml
@@ -10,12 +10,12 @@ BenefitPackages:
   - id: 1
     name: Access Advantage Standard Programming
     benefits:
+      - id: 1
+        code: B0001
+        description: 4 rounds per month within the Community, max of 2 per club
       - id: 2
         code: B0002
         description: Sunday Noon - Friday Noon; 7 Day advance tee times
-      - id: 23
-        code: B0023
-        description: 4 rounds per month at Home Club
   - id: 2
     name: Dine & Play Away Standard Programming
     benefits:
@@ -684,12 +684,12 @@ Clubs:
       - id: 1
         name: Access Advantage Standard Programming
         benefits:
+          - id: 1
+            code: B0001
+            description: 4 rounds per month within the Community, max of 2 per club
           - id: 2
             code: B0002
             description: Sunday Noon - Friday Noon; 7 Day advance tee times
-          - id: 23
-            code: B0023
-            description: 4 rounds per month at Home Club
       - id: 2
         name: Dine & Play Away Standard Programming
         benefits:
@@ -736,9 +736,9 @@ Clubs:
       geoLocation:
         latitude: 32.93752775
         longitude: -96.8639805513445
+    owned: true
     alliance: false
     active: true
-    owned: true
   - id: 2
     name: Trophy Club Country Club
     phoneNumber:
@@ -763,12 +763,12 @@ Clubs:
       - id: 1
         name: Access Advantage Standard Programming
         benefits:
+          - id: 1
+            code: B0001
+            description: 4 rounds per month within the Community, max of 2 per club
           - id: 2
             code: B0002
             description: Sunday Noon - Friday Noon; 7 Day advance tee times
-          - id: 23
-            code: B0023
-            description: 4 rounds per month at Home Club
       - id: 2
         name: Dine & Play Away Standard Programming
         benefits:
@@ -815,9 +815,9 @@ Clubs:
       geoLocation:
         latitude: 32.997559
         longitude: -97.193252
+    owned: true
     alliance: false
     active: true
-    owned: true
   - id: 3
     name: The Clubs of Kingwood
     phoneNumber:
@@ -842,12 +842,12 @@ Clubs:
       - id: 1
         name: Access Advantage Standard Programming
         benefits:
+          - id: 1
+            code: B0001
+            description: 4 rounds per month within the Community, max of 2 per club
           - id: 2
             code: B0002
             description: Sunday Noon - Friday Noon; 7 Day advance tee times
-          - id: 23
-            code: B0023
-            description: 4 rounds per month at Home Club
       - id: 2
         name: Dine & Play Away Standard Programming
         benefits:
@@ -894,9 +894,9 @@ Clubs:
       geoLocation:
         latitude: 30.037706200000002
         longitude: -95.178274850129
+    owned: true
     alliance: false
     active: true
-    owned: true
   - id: 4
     name: Stonebriar Country Club
     phoneNumber:
@@ -921,12 +921,12 @@ Clubs:
       - id: 1
         name: Access Advantage Standard Programming
         benefits:
+          - id: 1
+            code: B0001
+            description: 4 rounds per month within the Community, max of 2 per club
           - id: 2
             code: B0002
             description: Sunday Noon - Friday Noon; 7 Day advance tee times
-          - id: 23
-            code: B0023
-            description: 4 rounds per month at Home Club
       - id: 2
         name: Dine & Play Away Standard Programming
         benefits:
@@ -973,9 +973,88 @@ Clubs:
       geoLocation:
         latitude: 33.096720250000004
         longitude: -96.8533531412519
+    owned: true
     alliance: false
     active: true
+  - id: 5
+    name: Canyon Creek Country Club
+    phoneNumber:
+    website:
+    markets:
+      - id: 45
+        name: Dallas
+    communities:
+      - id: 9
+        name: Dallas Fort Worth
+    providerGroups:
+      - id: 18
+        name: XLife Dine & Play Away Golf Owned
+    amenities:
+      - id: 1
+        name: DINING
+      - id: 2
+        name: COURT
+      - id: 3
+        name: GOLF
+    benefitPackages:
+      - id: 1
+        name: Access Advantage Standard Programming
+        benefits:
+          - id: 1
+            code: B0001
+            description: 4 rounds per month within the Community, max of 2 per club
+          - id: 2
+            code: B0002
+            description: Sunday Noon - Friday Noon; 7 Day advance tee times
+      - id: 2
+        name: Dine & Play Away Standard Programming
+        benefits:
+          - id: 3
+            code: B0003
+            description: 2 rounds per month per club, outside of 100 mile radius from Home
+              Club
+          - id: 4
+            code: B0004
+            description: Clubs block one morning and one afternoon time slot each day for
+              Play Away access
+          - id: 5
+            code: B0005
+            description: 30 Day advance tee times
+          - id: 6
+            code: B0006
+            description: Tiered Play rates (in addition to regular cart fee) based on Home
+              club and Destination Club segmentation
+          - id: 7
+            code: B0007
+            description: 50% off Home club dining, some clubs with peak time restrictions
+          - id: 8
+            code: B0008
+            description: Dining access for all Play Away members at all clubs (Community
+              & Travel)
+          - id: 9
+            code: B0009
+            description: 25% off evening dining at all City & Stadium clubs
+    segment:
+      color: Green
+      name: Select
+    lineOfBusiness:
+      id: 4
+      name: Country Club
+    address:
+      id: 5
+      line1: 625 W Lookout Dr
+      line2:
+      city: Richardson
+      state: TX
+      zipCode:
+        postalCode: '75080'
+        plusFour:
+      geoLocation:
+        latitude: 32.99001155
+        longitude: -96.73297036359577
     owned: true
+    alliance: false
+    active: true
 Members:
   - id: 1
     loginId: member1
@@ -983,7 +1062,7 @@ Members:
     lastName: Smith
     email:
     homeAddress:
-      id: 5
+      id: 6
       line1: 3307 Chadwell Dr
       line2:
       city: Farmers Branch
@@ -1000,7 +1079,7 @@ Members:
     lastName: Smith
     email:
     homeAddress:
-      id: 6
+      id: 7
       line1: 3307 Chadwell Dr
       line2:
       city: Farmers Branch
@@ -1017,7 +1096,7 @@ Members:
     lastName: Johns
     email:
     homeAddress:
-      id: 7
+      id: 8
       line1: 3350 South Cotswold Manor Drive
       line2:
       city: Kingwood
@@ -1034,8 +1113,8 @@ Members:
     lastName: Anthony
     email:
     homeAddress:
-      id: 8
-      line1: 3350 South Cotswold Manor Drive
+      id: 9
+      line1: 3351 South Cotswold Manor Drive
       line2:
       city: Kingwood
       state: TX
@@ -1043,8 +1122,25 @@ Members:
         postalCode: '77339'
         plusFour:
       geoLocation:
-        latitude: 30.0353877
-        longitude: -95.20746071890034
+        latitude: 30.0343333
+        longitude: -95.2020318
+  - id: 5
+    loginId: member5
+    firstName: Bob
+    lastName: Thomas
+    email:
+    homeAddress:
+      id: 10
+      line1: 3306 Chadwell Dr
+      line2:
+      city: Farmers Branch
+      state: TX
+      zipCode:
+        postalCode: '75234'
+        plusFour:
+      geoLocation:
+        latitude: 32.930355
+        longitude: -96.866276
 Memberships:
   - id: 1
     level: GOLD
@@ -1055,7 +1151,7 @@ Memberships:
         lastName: Smith
         email:
         homeAddress:
-          id: 5
+          id: 6
           line1: 3307 Chadwell Dr
           line2:
           city: Farmers Branch
@@ -1072,7 +1168,7 @@ Memberships:
         lastName: Smith
         email:
         homeAddress:
-          id: 6
+          id: 7
           line1: 3307 Chadwell Dr
           line2:
           city: Farmers Branch
@@ -1084,30 +1180,15 @@ Memberships:
             latitude: 32.930355
             longitude: -96.866276
     benefitPackage:
-      id: 2
-      name: Dine & Play Away Standard Programming
+      id: 1
+      name: Access Advantage Standard Programming
       benefits:
-        - id: 3
-          code: B0003
-          description: 2 rounds per month per club, outside of 100 mile radius from Home Club
-        - id: 4
-          code: B0004
-          description: Clubs block one morning and one afternoon time slot each day for Play Away access
-        - id: 5
-          code: B0005
-          description: 30 Day advance tee times
-        - id: 6
-          code: B0006
-          description: Tiered Play rates (in addition to regular cart fee) based on Home club and Destination Club segmentation
-        - id: 7
-          code: B0007
-          description: 50% off Home club dining, some clubs with peak time restrictions
-        - id: 8
-          code: B0008
-          description: Dining access for all Play Away members at all clubs (Community & Travel)
-        - id: 9
-          code: B0009
-          description: 25% off evening dining at all City & Stadium clubs
+        - id: 1
+          code: B0001
+          description: 4 rounds per month within the Community, max of 2 per club
+        - id: 2
+          code: B0002
+          description: Sunday Noon - Friday Noon; 7 Day advance tee times
     homeClub:
       id: 1
       name: Brookhaven Country Club
@@ -1133,12 +1214,12 @@ Memberships:
         - id: 1
           name: Access Advantage Standard Programming
           benefits:
+            - id: 1
+              code: B0001
+              description: 4 rounds per month within the Community, max of 2 per club
             - id: 2
               code: B0002
               description: Sunday Noon - Friday Noon; 7 Day advance tee times
-            - id: 23
-              code: B0023
-              description: 4 rounds per month at Home Club
         - id: 2
           name: Dine & Play Away Standard Programming
           benefits:
@@ -1185,9 +1266,9 @@ Memberships:
         geoLocation:
           latitude: 32.93752775
           longitude: -96.8639805513445
-      active: true
       owned: true
       alliance: false
+      active: true
   - id: 2
     level: GOLD
     members:
@@ -1197,7 +1278,7 @@ Memberships:
         lastName: Johns
         email:
         homeAddress:
-          id: 7
+          id: 8
           line1: 3350 South Cotswold Manor Drive
           line2:
           city: Kingwood
@@ -1209,15 +1290,34 @@ Memberships:
             latitude: 30.0353877
             longitude: -95.20746071890034
     benefitPackage:
-      id: 1
-      name: Access Advantage Standard Programming
+      id: 2
+      name: Dine & Play Away Standard Programming
       benefits:
-        - id: 2
-          code: B0002
-          description: Sunday Noon - Friday Noon; 7 Day advance tee times
-        - id: 23
-          code: B0023
-          description: 4 rounds per month at Home Club
+        - id: 3
+          code: B0003
+          description: 2 rounds per month per club, outside of 100 mile radius from Home
+            Club
+        - id: 4
+          code: B0004
+          description: Clubs block one morning and one afternoon time slot each day for
+            Play Away access
+        - id: 5
+          code: B0005
+          description: 30 Day advance tee times
+        - id: 6
+          code: B0006
+          description: Tiered Play rates (in addition to regular cart fee) based on Home
+            club and Destination Club segmentation
+        - id: 7
+          code: B0007
+          description: 50% off Home club dining, some clubs with peak time restrictions
+        - id: 8
+          code: B0008
+          description: Dining access for all Play Away members at all clubs (Community
+            & Travel)
+        - id: 9
+          code: B0009
+          description: 25% off evening dining at all City & Stadium clubs
     homeClub:
       id: 3
       name: The Clubs of Kingwood
@@ -1243,12 +1343,12 @@ Memberships:
         - id: 1
           name: Access Advantage Standard Programming
           benefits:
+            - id: 1
+              code: B0001
+              description: 4 rounds per month within the Community, max of 2 per club
             - id: 2
               code: B0002
               description: Sunday Noon - Friday Noon; 7 Day advance tee times
-            - id: 23
-              code: B0023
-              description: 4 rounds per month at Home Club
         - id: 2
           name: Dine & Play Away Standard Programming
           benefits:
@@ -1295,9 +1395,9 @@ Memberships:
         geoLocation:
           latitude: 30.037706200000002
           longitude: -95.178274850129
-      active: true
       owned: true
       alliance: false
+      active: true
   - id: 3
     level: GOLD
     members:
@@ -1307,8 +1407,8 @@ Memberships:
         lastName: Anthony
         email:
         homeAddress:
-          id: 8
-          line1: 3350 South Cotswold Manor Drive
+          id: 9
+          line1: 3351 South Cotswold Manor Drive
           line2:
           city: Kingwood
           state: TX
@@ -1316,15 +1416,16 @@ Memberships:
             postalCode: '77339'
             plusFour:
           geoLocation:
-            latitude: 30.0353877
-            longitude: -95.20746071890034
+            latitude: 30.0343333
+            longitude: -95.2020318
     benefitPackage:
       id: 4
       name: Xlife Stadium
       benefits:
         - id: 13
           code: B0013
-          description: Home Club access to all Stadium clubs with 50% off dining (not through Network benefits)
+          description: Home Club access to all Stadium clubs with 50% off dining (not
+            through Network benefits)
         - id: 14
           code: B0014
           description: Access to Full price dining at all Golf & City Clubs
@@ -1365,30 +1466,30 @@ Memberships:
         - id: 1
           name: Access Advantage Standard Programming
           benefits:
+            - id: 1
+              code: B0001
+              description: 4 rounds per month within the Community, max of 2 per club
             - id: 2
               code: B0002
               description: Sunday Noon - Friday Noon; 7 Day advance tee times
-            - id: 23
-              code: B0023
-              description: 4 rounds per month at Home Club
         - id: 2
           name: Dine & Play Away Standard Programming
           benefits:
             - id: 3
               code: B0003
-              description: 2 rounds per month per club, outside of 100 mile radius from Home
-                Club
+              description: 2 rounds per month per club, outside of 100 mile radius from
+                Home Club
             - id: 4
               code: B0004
-              description: Clubs block one morning and one afternoon time slot each day for
-                Play Away access
+              description: Clubs block one morning and one afternoon time slot each day
+                for Play Away access
             - id: 5
               code: B0005
               description: 30 Day advance tee times
             - id: 6
               code: B0006
-              description: Tiered Play rates (in addition to regular cart fee) based on Home
-                club and Destination Club segmentation
+              description: Tiered Play rates (in addition to regular cart fee) based on
+                Home club and Destination Club segmentation
             - id: 7
               code: B0007
               description: 50% off Home club dining, some clubs with peak time restrictions
@@ -1420,4 +1521,132 @@ Memberships:
       owned: true
       alliance: false
       active: true
-
+  - id: 4
+    level: GOLD
+    members:
+      - id: 5
+        loginId: member5
+        firstName: Bob
+        lastName: Thomas
+        email:
+        homeAddress:
+          id: 10
+          line1: 3306 Chadwell Dr
+          line2:
+          city: Farmers Branch
+          state: TX
+          zipCode:
+            postalCode: '75234'
+            plusFour:
+          geoLocation:
+            latitude: 32.930355
+            longitude: -96.866276
+    benefitPackage:
+      id: 2
+      name: Dine & Play Away Standard Programming
+      benefits:
+        - id: 3
+          code: B0003
+          description: 2 rounds per month per club, outside of 100 mile radius from Home
+            Club
+        - id: 4
+          code: B0004
+          description: Clubs block one morning and one afternoon time slot each day for
+            Play Away access
+        - id: 5
+          code: B0005
+          description: 30 Day advance tee times
+        - id: 6
+          code: B0006
+          description: Tiered Play rates (in addition to regular cart fee) based on Home
+            club and Destination Club segmentation
+        - id: 7
+          code: B0007
+          description: 50% off Home club dining, some clubs with peak time restrictions
+        - id: 8
+          code: B0008
+          description: Dining access for all Play Away members at all clubs (Community
+            & Travel)
+        - id: 9
+          code: B0009
+          description: 25% off evening dining at all City & Stadium clubs
+    homeClub:
+      id: 1
+      name: Brookhaven Country Club
+      phoneNumber:
+      website:
+      markets:
+        - id: 45
+          name: Dallas
+      communities:
+        - id: 9
+          name: Dallas Fort Worth
+      providerGroups:
+        - id: 18
+          name: XLife Dine & Play Away Golf Owned
+      amenities:
+        - id: 1
+          name: DINING
+        - id: 2
+          name: COURT
+        - id: 3
+          name: GOLF
+      benefitPackages:
+        - id: 1
+          name: Access Advantage Standard Programming
+          benefits:
+            - id: 1
+              code: B0001
+              description: 4 rounds per month within the Community, max of 2 per club
+            - id: 2
+              code: B0002
+              description: Sunday Noon - Friday Noon; 7 Day advance tee times
+        - id: 2
+          name: Dine & Play Away Standard Programming
+          benefits:
+            - id: 3
+              code: B0003
+              description: 2 rounds per month per club, outside of 100 mile radius from
+                Home Club
+            - id: 4
+              code: B0004
+              description: Clubs block one morning and one afternoon time slot each day
+                for Play Away access
+            - id: 5
+              code: B0005
+              description: 30 Day advance tee times
+            - id: 6
+              code: B0006
+              description: Tiered Play rates (in addition to regular cart fee) based on
+                Home club and Destination Club segmentation
+            - id: 7
+              code: B0007
+              description: 50% off Home club dining, some clubs with peak time restrictions
+            - id: 8
+              code: B0008
+              description: Dining access for all Play Away members at all clubs (Community
+                & Travel)
+            - id: 9
+              code: B0009
+              description: 25% off evening dining at all City & Stadium clubs
+      segment:
+        color: Green
+        name: Select
+      lineOfBusiness:
+        id: 2
+        name: Golf Club
+      address:
+        id: 1
+        line1: 3333 Golfing Green Dr
+        line2:
+        city: Farmers Branch
+        state: TX
+        zipCode:
+          postalCode: '75234'
+          plusFour:
+        geoLocation:
+          latitude: 32.93752775
+          longitude: -96.8639805513445
+      owned: true
+      alliance: false
+      active: true
